--- a/styles/login.css
+++ b/styles/login.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+:root{
+  --main-background:#fbd1b7;
+  --input-background:#000232;
+  --button-color:#b689b0;
+}
+
 body {
   height: 100vh;
   display: flex;
