--- a/styles/login.css
+++ b/styles/login.css
@@ -4,10 +4,10 @@
   box-sizing: border-box;
 }
 
-:root{
-  --main-background:#fbd1b7;
-  --input-background:#000232;
-  --button-color:#b689b0;
+:root {
+  --main-background: #fbd1b7;
+  --input-background: #000232;
+  --button-color: #b689b0;
 }
 
 body {
@@ -16,41 +16,76 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
 .input-group {
-  margin-bottom: 1rem;
+  margin-bottom: 10px;
   text-align: left;
 }
 
-.input-group label {
+ .input-group label {
   display: block;
-  font-size: 0.9rem;
+  font-size: 14px;
   margin-bottom: 5px;
 }
+
 
 .input-group input {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #0e0e0e;
   border-radius: 5px;
-  outline: none;
-  transition: border 0.3s ease;
 }
 
-.border-1{
-  border:1px solid black;
+.border-1 {
+  border: 1px solid black;
 }
 
-.login-container{
-  height:600px;
+.login-container {
+  height: 600px;
   width: 350px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.login-content{
-  flex:1;
+.login-header {
+  display: flex;
+  padding: 5px;
 }
+
+.login-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.logo {
+  border: 1px solid rgb(6, 6, 6);
+  height: 100px;
+  width: 100px;
+  overflow: hidden;
+  border-radius: 50px;
+}
+
+.logo img {
+  height: auto;
+  max-width: 100%;
+}
+
+.head-title{
+  flex:1;
+  margin-left: 5px;
+  text-align: center;
+  padding: 10px;
+}
+
+
+.login-button{
+  width: 100%;
+  height: 30px;
+  color: white;
+  background-color: #b689b0;
+  border-radius: 5px;
+  border: 0px;
+}
+
